# autonoma

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  knip.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.autonoma/: init.sh  install.mjs  install.sh  uninstall.mjs  uninstall.sh
.autonoma/cron/: autonoma-checkin.sh  com.autonoma.scheduler.plist  scheduler.sh
.autonoma/hooks/: hook-post.mjs  post-tool-use-failure.sh  post-tool-use.sh  pre-tool-use.sh  session-end.sh  session-start.sh  stop.sh  subagent-start.sh  subagent-stop.sh
.autonoma/scripts/: autonoma_runtime.py  bb-query.py  bb-write.py  bb_write.py  hook-dispatch.sh  hook_dispatch.py  init-db.sh  runtime-common.sh
.autonoma/whatsapp/: README.md  config.json.example  run-entry.js
.pi/: AGENTS.md  skills
features/: major-phases.md  overview.md
features/blackboard/: FEATURE.md
features/control-surface/: FEATURE.md
features/cron-scheduler/: FEATURE.md
features/installer/: FEATURE.md
features/web-app/: FEATURE.md
features/whatsapp-channel/: FEATURE.md
src/blackboard/: db.ts  migrate.ts  schema.sql
src/claude-sessions/: launch-session.ts  send-message.ts  tmux.ts
src/config/: load-config.ts
src/contracts/: blackboard-schema.sql  blackboard.ts  control-surface-api.ts  index.ts  tmux-bridge.ts  transcript.ts  websocket.ts  whatsapp.ts
src/control-surface/: cron.ts  runtime.ts  server.ts  transcript-reader.ts  transcript.ts
src/whatsapp/: auth.ts  (+8 more)
web/: .env.example  README.md  knip.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+173 files in other folders)
