[project]
name = "autonoma"
version = "0.1.0"
description = "Development and audit tooling for Autonoma runtime scripts"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F", "I"]

[tool.vulture]
min_confidence = 100
paths = [".autonoma/scripts"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "vulture>=2.15",
]
